# Lang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README
.github/workflows/: ci.yml
apps/torturec/: main.cpp
apps/torturevm/: main.cpp
bench/: bench.py  bench.torture  run_bench.sh
docs/: coding_standards.md  language_tutorial_zh.md  std_and_ffi_zh.md
fixtures/invalid/: badindent.torture  badsha.torture
fixtures/valid/: ffibind.torture  gradebook.torture  helloworld.torture  reference.torture  smoke.torture  stdhello.torture
src/common/: diagnostic.cpp  diagnostic.h  result.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h  source.cpp  source.h
src/compiler/: ast.cpp  ast.h  ast_visitor.h  bytecode_compiler.cpp  bytecode_compiler.h  indentation.cpp  indentation.h  lexer.cpp  lexer.h  parser.cpp  parser.h  sema.cpp  sema.h  token.h
src/vm/: bytecode.cpp  bytecode.h  bytecode_binary.cc  bytecode_format.h  environment.cpp  environment.h  instruction_handler.h  language_symbols.h  memory.cpp  memory.h  opcode.cc  opcode.h  platform.cpp  platform.h  platform_bytecode.cpp  platform_bytecode.h  platform_vm.cpp  platform_vm.h  value.cpp  value.h  vm.cpp  vm.h
tests/: test_lexer.cpp  test_parser_sema.cpp  test_vm_smoke.cpp
